@@ -127,6 +127,7 @@
 #define CONTROL_GROUP_MIRROR 1365
 #define CONTROL_KDESUPPORT 1366
 #define CONTROL_CLICK_ALWAYS 1367
+#define CONTROL_SHOWROOTTOOLTIP 1368
 
 #define ICLASS_NAME 350
 #define ICLASS_NORMAL 351
