@@ -58,7 +58,7 @@ static Time         last_time = 0;
 static int          last_button = 0;
 static int          pgd_x = 0, pgd_y = 0;
 
-static void
+static void 
 ToolTipTimeout(int val, void *data)
 {
    int                 x, y, dum;
@@ -88,15 +88,32 @@ ToolTipTimeout(int val, void *data)
 		      LIST_TYPE_TOOLTIP);
 
    if (ac->tooltipstring)
-      ShowToolTip(ttip, ac->tooltipstring, ac, x, y);
+     {
+	if (mode.showroottooltip)
+	  {
+	     ShowToolTip(ttip, ac->tooltipstring, ac, x, y);
+	  }
+	else
+	  {
+	     int                 i;
+	     int                 show = 1;
 
+	     for (i = 0; i < mode.numdesktops; i++)
+	       {
+		  if (win == desks.desk[i].win)
+		     show = 0;
+	       }
+	     if (show)
+		ShowToolTip(ttip, ac->tooltipstring, ac, x, y);
+	  }
+     }
    data = NULL;
    val = 0;
 
    EDBUG_RETURN_;
 }
 
-void
+void 
 HandleClientMessage(XEvent * ev)
 {
    EWin               *ewin;
@@ -215,7 +232,7 @@ HandleClientMessage(XEvent * ev)
 
 }
 
-void
+void 
 HandleFocusWindowIn(Window win)
 {
    EWin               *ewin;
@@ -257,7 +274,7 @@ HandleFocusWindowIn(Window win)
    EDBUG_RETURN_;
 }
 
-void
+void 
 HandleFocusWindow(Window win)
 {
    EWin               *found_ewin;
@@ -291,7 +308,7 @@ HandleFocusWindow(Window win)
    EDBUG_RETURN_;
 }
 
-void
+void 
 HandleChildShapeChange(XEvent * ev)
 {
    Window              win;
@@ -311,7 +328,7 @@ HandleChildShapeChange(XEvent * ev)
    EDBUG_RETURN_;
 }
 
-void
+void 
 HandleMotion(XEvent * ev)
 {
    int                 dx, dy;
@@ -942,7 +959,7 @@ HandleMotion(XEvent * ev)
    EDBUG_RETURN_;
 }
 
-void
+void 
 HandleDestroy(XEvent * ev)
 {
    Window              win;
@@ -1022,7 +1039,7 @@ HandleDestroy(XEvent * ev)
    EDBUG_RETURN_;
 }
 
-void
+void 
 HandleProperty(XEvent * ev)
 {
    Window              win;
@@ -1108,7 +1125,7 @@ HandleProperty(XEvent * ev)
    EDBUG_RETURN_;
 }
 
-void
+void 
 HandleCirculate(XEvent * ev)
 {
    Window              win;
@@ -1134,7 +1151,7 @@ HandleCirculate(XEvent * ev)
    EDBUG_RETURN_;
 }
 
-void
+void 
 HandleReparent(XEvent * ev)
 {
    Window              par;
@@ -1191,7 +1208,7 @@ HandleReparent(XEvent * ev)
    EDBUG_RETURN_;
 }
 
-void
+void 
 HandleConfigureRequest(XEvent * ev)
 {
    Window              win, winrel;
@@ -1288,7 +1305,7 @@ HandleConfigureRequest(XEvent * ev)
    EDBUG_RETURN_;
 }
 
-void
+void 
 HandleResizeRequest(XEvent * ev)
 {
    Window              win;
@@ -1321,7 +1338,7 @@ HandleResizeRequest(XEvent * ev)
    EDBUG_RETURN_;
 }
 
-void
+void 
 HandleUnmap(XEvent * ev)
 {
    Window              win;
@@ -1401,7 +1418,7 @@ HandleUnmap(XEvent * ev)
    EDBUG_RETURN_;
 }
 
-void
+void 
 HandleMapRequest(XEvent * ev)
 {
    Window              win;
@@ -1431,7 +1448,7 @@ HandleMapRequest(XEvent * ev)
    EDBUG_RETURN_;
 }
 
-void
+void 
 HandleExpose(XEvent * ev)
 {
    Window              win;
@@ -1523,7 +1540,7 @@ HandleExpose(XEvent * ev)
 static int          pwin_px, pwin_py;
 static int         *gwin_px, *gwin_py;
 
-void
+void 
 HandleMouseDown(XEvent * ev)
 {
    Window              win;
@@ -1855,7 +1872,7 @@ HandleMouseDown(XEvent * ev)
    EDBUG_RETURN_;
 }
 
-void
+void 
 HandleMouseUp(XEvent * ev)
 {
    Window              win, win2;
@@ -2002,7 +2019,6 @@ HandleMouseUp(XEvent * ev)
 	clickmenu = 1;
 	justclicked = 1;
      }
-
    if ((m) && (mi->state))
      {
 	mi->state = STATE_HILITED;
@@ -2461,7 +2477,7 @@ HandleMouseUp(XEvent * ev)
    EDBUG_RETURN_;
 }
 
-static void
+static void 
 SubmenuShowTimeout(int val, void *dat)
 {
    int                 mx, my;
@@ -2495,7 +2511,7 @@ SubmenuShowTimeout(int val, void *dat)
    val = 0;
 }
 
-void
+void 
 HandleMouseIn(XEvent * ev)
 {
    Window              win;
@@ -2651,7 +2667,7 @@ HandleMouseIn(XEvent * ev)
    EDBUG_RETURN_;
 }
 
-void
+void 
 HandleMouseOut(XEvent * ev)
 {
    Window              win;
